...
    <string name="generation_notification_failed_title">Reply could not be completed</string>
    <string name="generation_notification_finished_text">Tap to view the conversation</string>
    <string name="generation_notification_stop">Stop</string>
    <string name="generation_notification_stop_all">Stop all</string>
    <string name="generation_background_unavailable">Unable to start background generation. Keep the app open and try again.</string>
    <string name="generation_notification_permission">Allow notifications to receive an alert when background replies finish.</string>
    <string name="knowledge_scope_chat">Knowledge scope</string>
</resources>

